refactor: 주문 생성 로직 Query DB IO 조회 성능 개선